--- a/src/_interface.scss
+++ b/src/_interface.scss
@@ -6,254 +6,266 @@
 // }
 
 .square {
-    position: relative;
-    border: solid black 5px;
-    border-radius: 5px;
-    table-layout: fixed;
+  position: relative;
+  border: solid black 5px;
+  border-radius: 5px;
+  table-layout: fixed;
 
-    &:after {
-        content: "";
-        display: flex;
-        padding-bottom: 60vh;
-        background-color: #BEBFC4;
-        border: solid black 10px;
-        border-radius: 5px;
-        border-top: solid black 3vh;
-        border-bottom: solid black 4vh;
-    }
+  &:after {
+    content: "";
+    display: flex;
+    padding-bottom: 60vh;
+    background-color: #bebfc4;
+    border: solid black 10px;
+    border-radius: 5px;
+    border-top: solid black 3vh;
+    border-bottom: solid black 4vh;
+  }
 }
 
 .controls {
-    margin-left: 4vh;
-    margin-right: 4vh;
-    margin-bottom: -15px;
+  margin-left: 4vh;
+  margin-right: 4vh;
+  margin-bottom: -15px;
 }
 
 .a-b {
+  .a {
+    top: 15px;
+    right: 10px;
+  }
 
-    .a {
-        top: 15px;
-        right: 10px;
-    }
-
-    .b {
-        top: 35px;
-        left: 0%;
-    }
+  .b {
+    top: 35px;
+    left: 0%;
+  }
 }
 
 .controls {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-    .dpad {
+  .dpad {
+    position: relative;
+    display: inline-block;
+    width: 90px;
+    height: 90px;
+    z-index: 5;
+    margin-top: 1vh;
+
+    > * {
+      width: 33%;
+      height: 33%;
+      position: absolute;
+      background-color: $bg-but-pad;
+      cursor: pointer;
+
+      i {
         position: relative;
-        display: inline-block;
-        width: 90px;
-        height: 90px;
-        z-index: 5;
-        margin-top: 1vh;
-
-        >* {
-            width: 33%;
-            height: 33%;
-            position: absolute;
-            background-color: $bg-but-pad;
-            cursor: pointer;
-
-            i {
-                position: relative;
-                display: block;
-                margin: 0 auto;
-                text-align: center;
-                height: 100%;
-                font-size: 28px;
-                color: $bg-but-pad-2;
-                text-shadow: 0px -0.5px 0px $pad-but-text-shadow;
-            }
-        }
-
-        .up {
-            @include pad-buttons('top');
-        }
-
-        .right {
-            @include pad-buttons('right');
-        }
-
-        .down {
-            @include pad-buttons('down');
-        }
-
-        .left {
-            @include pad-buttons('left');
-        }
-
-        .middle {
-            top: 33%;
-            left: 33%;
-            z-index: -5;
-
-            &::after {
-                content: '';
-                position: absolute;
-                top: 20%;
-                left: 20%;
-                display: inline-block;
-                border: 1px solid #6e737a;
-                background: linear-gradient(to bottom, #6d7075 0%, #6d7075 30%, #23272f 70%, #23272f 100%);
-                border-radius: 50%;
-                height: 60%;
-                width: 60%;
-            }
-        }
-
-        .up-down {
-            @include pad-buttons('up-down');
-        }
-
-        .left-right {
-            @include pad-buttons('left-right');
-        }
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+        height: 100%;
+        font-size: 28px;
+        color: $bg-but-pad-2;
+        text-shadow: 0px -0.5px 0px $pad-but-text-shadow;
+      }
     }
 
-    .a-b {
-        position: relative;
-        display: inline-block;
-        width: 120px;
-        height: 90px;
-
-        .a,
-        .b {
-            position: absolute;
-            display: inline-block;
-            font-size: 22px;
-            width: 40px;
-            height: 40px;
-            line-height: 40px;
-            border-radius: 50%;
-            border-bottom: 2px solid $pad-but-shadow;
-            text-align: center;
-            -webkit-user-select: none;
-            cursor: pointer;
-            transition: all 0.1s ease;
-            transform: translateY(0);
-            &:active{
-                transform: translateY(2px);
-            }
-        }
+    .up {
+      @include pad-buttons("top");
     }
+
+    .right {
+      @include pad-buttons("right");
+    }
+
+    .down {
+      @include pad-buttons("down");
+    }
+
+    .left {
+      @include pad-buttons("left");
+    }
+
+    .middle {
+      top: 33%;
+      left: 33%;
+      z-index: -5;
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 20%;
+        left: 20%;
+        display: inline-block;
+        border: 1px solid #6e737a;
+        background: linear-gradient(
+          to bottom,
+          #6d7075 0%,
+          #6d7075 30%,
+          #23272f 70%,
+          #23272f 100%
+        );
+        border-radius: 50%;
+        height: 60%;
+        width: 60%;
+      }
+    }
+
+    .up-down {
+      @include pad-buttons("up-down");
+    }
+
+    .left-right {
+      @include pad-buttons("left-right");
+    }
+  }
+
+  .a-b {
+    position: relative;
+    display: inline-block;
+    width: 120px;
+    height: 90px;
+
+    .a,
+    .b {
+      position: absolute;
+      display: inline-block;
+      font-size: 22px;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      border-radius: 50%;
+      border-bottom: 2px solid $pad-but-shadow;
+      text-align: center;
+      -webkit-user-select: none;
+      cursor: pointer;
+      transition: all 0.1s ease;
+      transform: translateY(0);
+      &:active {
+        transform: translateY(2px);
+      }
+    }
+  }
 }
 
-.mat-card-actions{
-    margin-right: 0 !important;
-    margin-left: 0 !important;
+.mat-card-actions {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
 
-
-.start-select {
+  .start-select {
     width: 100%;
     height: 0;
     display: flex;
     justify-content: center;
+    position: absolute;
+    top: 80vh;
 
     .select,
     .start {
-        display: inline-block;
-        letter-spacing: -1px;
-        width: 60px;
-        font-size: 16px;
-        text-align: center;
-        margin-top: 60px;
+      display: inline-block;
+      letter-spacing: -1px;
+      width: 60px;
+      font-size: 16px;
+      text-align: center;
+      margin-top: 60px;
 
-        &::before {
-            content: '';
-            display: block;
-            margin: 0 auto;
-            width: 30px;
-            height: 10px;
-            margin-bottom: 5px;
-            border-radius: 15px;
-            background: black;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            transform: translateY(0);
-        }
+      &::before {
+        content: "";
+        display: block;
+        margin: 0 auto;
+        width: 30px;
+        height: 10px;
+        margin-bottom: 5px;
+        border-radius: 15px;
+        background: black;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        transform: translateY(0);
+      }
 
-        &:active::before{
-            background: #484848;
-            transform: translateY(2px);
-        }
+      &:active::before {
+        background: #484848;
+        transform: translateY(2px);
+      }
     }
-}
-
+  }
 }
 
 @media (min-width: 800px) {
-    html, body {
-        background-color: $body-bg-md-up !important;
-        overflow-y: hidden;
-        overflow-x: hidden;
-    }
+  html,
+  body {
+    background-color: $body-bg-md-up !important;
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
 
-    .controls {
-        margin-left: -20vh;
-        margin-right: -22vh;
-        margin-bottom: -152px;
-        position: relative;
-        top: -50vh;
-    }
+  .controls {
+    margin-left: -20vh;
+    margin-right: -22vh;
+    margin-bottom: -152px;
+    position: relative;
+    top: -50vh;
+  }
 
-    .square {
-        width: 100%;
-        &:after {
-            padding-bottom: 55vh;
-            width: 100%;
-        }
+  .square {
+    width: 100%;
+    &:after {
+      padding-bottom: 55vh;
+      width: 100%;
     }
+  }
 
-    .inside-frame {
-        position: absolute;
-        border-radius: 2px;
-        z-index: 3;
-        height: 88.9%;
-        max-width: 98.1%;
-        left: 0.95%;
-        top: 4.8%;
+  .inside-frame {
+    position: absolute;
+    border-radius: 2px;
+    z-index: 3;
+    height: 88.9%;
+    max-width: 98.1%;
+    left: 0.95%;
+    top: 4.8%;
+  }
+  .mat-card-actions {
+    .start-select {
+      top: 65vh;
     }
+  }
 
-    .a, .b {
-        background-color: #BEBFC4;
-        color: $black;
-    }
+  .a,
+  .b {
+    background-color: #bebfc4;
+    color: $black;
+  }
 
-    .mat-card {
-        box-shadow: none;
-    }
-
+  .mat-card {
+    box-shadow: none;
+  }
 }
 
 @media (max-width: 799px) {
-    html, body {
+  html,
+  body {
     height: 100vh;
     width: 100vw;
     margin: 0;
     padding: 0;
-    }
+  }
 
-    .container{
-        max-width: 100vw !important;
-    }
+  .container {
+    max-width: 100vw !important;
+  }
 
-    .inside-frame {
-        position: absolute;
-        top: 20px;
-        height: 60vh;
-        z-index: 3;
-    }
+  .inside-frame {
+    position: absolute;
+    top: 20px;
+    height: 60vh;
+    z-index: 3;
+  }
 
-    .a, .b {
-        background-color: $dark-garnet;
-        color: white;
-    }
-    
+  .a,
+  .b {
+    background-color: $dark-garnet;
+    color: white;
+  }
 }
