--- a/src/app/components/how-to-play/how-to-play.component.html
+++ b/src/app/components/how-to-play/how-to-play.component.html
@@ -1,55 +1,81 @@
 <div class="container-fluid inside-frame" style="overflow: scroll;">
-    <div class="card d-flex flex-column " style="background-color: transparent; border: none;">
-        <div class="card-body text">
-            <img src="../../../assets/img/pokeDuelLogoTitle.png" style="width: 100%;"/>
-            <p class="card-text">
-            <h2>¡Hola, pokedueler!</h2>
+  <div class="card d-flex flex-column ">
+    <div class="card-body text">
+      <img src="../../../assets/img/pokeDuelLogoTitle.png" style="width: 100%;" />
 
-            Bienvenido a la guía básica de supervivencia, 
-            la cual te dará unos pequeños tips para pasar rondas en
-            PokeDuel.
+      <h1>¡Hola, pokedueler!</h1>
 
-            <h4>IDENTIFÍCATE</h4>
-            Es imprescindible que hagas login si tienes cuenta o bien te registres en el caso de no tenerla. ¡No te
-            llevará más de 30 segundos!
+      <p>Bienvenido a la guía básica de supervivencia,
+        la cual te dará unos pequeños tips para pasar rondas en
+        PokeDuel.</p>
 
-            <h4>ESCOGE A TU EQUIPO</h4>
+      <h2>IDENTIFÍCATE (NECESITAMOS SABER QUE ERES TÚ)</h2>
+      <p>
+        Es imprescindible que hagas <em>login</em> si tienes cuenta o bien te registres en el caso de no tenerla. ¡No te
+        llevará más de 30 segundos!
+      </p>
 
-            Una vez que te hayas identificado, necesitarás a tu equipo pokémon para poder combatir (o jugar, que queda
-            mejor). Para ello, se generarán tres pokémon aleatorios que conformarán tu equipo, el cual se enfrentará a
-            otros tres pokémon durante cada ronda.
+      <h2>ESCOGE A TU EQUIPO (SI NO, CON QUÉ VAS A JUGAR)</h2>
 
-            <h4>TABLA DE TIPOS</h4>
+      <p>
+        Una vez que te hayas identificado, necesitarás a tu equipo <em>pokémon</em> para poder combatir (o jugar, que
+        queda
+        mejor). Para ello, se generarán tres pokémon aleatorios que conformarán tu equipo, el cual se enfrentará a
+        otros tres pokémon durante cada ronda.
+      </p>
 
-            En esta aplicación, solo tenemos pokémon de 3 tipos: agua, fuego y planta. Cada tipo es fuerte y débil a la
-            vez dependiendo de a quién nos enfrentemos. La tabla a tener en cuenta, pues, es la siguiente:<br>
+      <h2>TABLA DE TIPOS (PARA DUMMIES)</h2>
+      <p>
 
-            Planta es fuerte contra agua pero débil contra fuego. <br>
-            Fuego es fuerte contra planta pero débil contra agua<br>
-            Agua es fuerte contra fuego pero débil contra planta<br>
+        En esta aplicación, solo tenemos pokémon de 3 tipos: <em>agua, fuego y planta</em>. Cada tipo es fuerte y débil
+        a la
+        vez dependiendo de a quién nos enfrentemos. La tabla a tener en cuenta, pues, es la siguiente:<br>
+        <br>
+        <code>
+          <ul>
+            <li>
+              Planta es fuerte contra agua pero débil contra fuego
+            </li>
+            <li>
+              Fuego es fuerte contra planta pero débil contra agua
 
-            <h4>JUEGO</h4>
+            </li>
+            <li>
+              Agua es fuerte contra fuego pero débil contra planta
 
-            Durante el juego tienes dos posibilidades con las que deberás trabajar: defender y atacar. Atacar quita un
-            tanto por ciento de salud; a la par, defender reduce el porcentaje de daño causado por el ataque.
+            </li>
+          </ul>
+        </code>
+      </p>
 
-            En el caso de ventaja de tipos, se quitará un 20% adicional; puede ocurrir, también que un pokémon,
-            independientemente del tipo, propicie un golpe crítico. En este caso, se quitará un 20% adicional.
+      <h2>JUEGO (A ESTO HEMOS VENIDO)</h2>
+      <p>
+        Durante el juego tienes dos posibilidades con las que deberás trabajar: <em>defender y atacar</em>. Atacar quita
+        un
+        tanto por ciento de salud; a la par, defender reduce el porcentaje de daño causado por el ataque.
 
-            La ronda se gana si has vencido a tu oponente (pasas de ronda), y se genera uno nuevo con el que tendrás que
-            combatir si quieres seguir avanzando de ronda.
+        En el caso de ventaja de tipos, se quitará un 20% adicional; puede ocurrir, también que un pokémon,
+        independientemente del tipo, propicie un golpe crítico. En este caso, se quitará un 20% adicional.
 
-            <h4>GUARDAR O CARGAR PARTIDA</h4>
+        La ronda se gana si has vencido a tu oponente (pasas de ronda), y se genera uno nuevo con el que tendrás que
+        combatir si quieres seguir avanzando de ronda.
 
-            Durante el transcurso del juego se podrá guardar o cargar partida. La primera opción actualiza tus
-            estadísticas (guarda tus progresos), y la segunda te permite cargar la última partida almacenada (guardada).
+      </p>
 
-            <h4>CERRAR SESIÓN</h4>
+      <h2>GUARDAR O CARGAR PARTIDA (SI NO PA' QUÉ JUEGAS)</h2>
+      <p>
 
-            Siempre que quieras dejar de jugar, debes cerrar la sesión (recomendado). Sin embargo, si por un casual la
-            página se te cierra o surge cualquier imprevisto, podrás ingresar de nuevo a ella con la última ronda que se
-            haya guardado y sin iniciar de nuevo sesión
-        </div>
+        Durante el transcurso del juego se podrá <em>guardar o cargar partida</em>. La primera opción actualiza tus
+        estadísticas (guarda tus progresos), y la segunda te permite cargar la última partida almacenada (guardada).
+      </p>
+
+      <h2>CERRAR SESIÓN (ADÉU)</h2>
+      <p>
+        Siempre que quieras dejar de jugar, debes cerrar la sesión (recomendado). Sin embargo, si por un casual la
+        página se te cierra o surge cualquier imprevisto, podrás ingresar de nuevo a ella con la última ronda que se
+        haya guardado y sin iniciar de nuevo sesión
+      </p>
     </div>
-    <img src="../../../assets/img/back.png" (click)="goTo()" style="width: 5vh; margin: 1vh;"/>
+  </div>
+  <img src="../../../assets/img/back.png" (click)="goTo()" style="width: 5vh; margin: 1vh;" />
 </div>
