--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -23,6 +23,7 @@ $dark-blue: #365eaa !default;
 // -- Body-background
 $body-bg-md-down: #bdbec1;
 $body-bg-md-up: #665f9e;
+$screen-gameboy-bg: #bebfc4;
 
 // -- Typography
 
@@ -30,6 +31,8 @@ $body-bg-md-up: #665f9e;
 // -- Pad-buttons
 $bg-but-pad: #565e6a;
 $bg-but-pad-2: #333a4a;
+$bg-pad-buttons: #6e737a;
+$a-b-bg: #bebfc4;
 
 
 // -- Shadows
