--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -46,7 +46,7 @@
         height: 20px;
     }
 
-    border-color: black;
+    border-color: $black;
     border-style: solid;
     background-color: $bg-but-pad;
 
