fix the load of the meus

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,11 +3,21 @@
         <div class="img-card">
             <img mat-card-image src="../../../assets/img/pokeDuelOnlyLogo.png">
         </div>
-        <div class="menu">
+        <div class="menu" *ngIf="!logged">
             <button mat-raised-button routerLink="/login">Log In</button>
             <button mat-raised-button routerLink="/register">Register</button>
             <button mat-raised-button routerLink="/credits">Credits</button>
             <button mat-raised-button (click)="quit()">Quit</button>
+        </div>
+        <div class="menu" *ngIf="logged">
+            <button mat-raised-button [routerLink]="['/game',userID]">New game</button>
+            <ng-container *ngIf="userStatExists">
+                <button mat-raised-button [routerLink]="['/continue-game', userID]">Continue</button>
+            </ng-container>
+            <button mat-raised-button [routerLink]="['/my-account',userID]">My account</button>
+            <button mat-raised-button routerLink="/how-to-play">How to play</button>
+            <button mat-raised-button routerLink="/credits">Credits</button>
+            <button mat-raised-button (click)="logOut()">Log out</button>
         </div>
     </section>
 </div>
