--- a/src/app/components/options/options.component.scss
+++ b/src/app/components/options/options.component.scss
@@ -7,7 +7,7 @@ $secondary: $secondary;
 
 .mat-slider-thumb-container {
     .mat-slider-thumb {
-        background-color: blue !important; //TODO: FIX DE COLOR
+        background-color: green !important; //TODO: FIX DE COLOR
     }
 }
 
