--- a/src/_functions.scss
+++ b/src/_functions.scss
@@ -3,13 +3,25 @@
 
 @function randomNum($max) {
     $rand: math.random($max);
-    $randomNum: math.round($rand);
-    @return $randomNum;
+    @return $rand;
 }
 
-@function chooseImg(){
-    $bg-img: (1: 'background-xl-battle.jpg', 2: 'bg-battle.png');
-    $randomNum: #{randomNum(2)};
-    @debug $randomNum;
-    @return map.get($bg-img, $randomNum) or 'bg-battle.png';
+@function chooseImg() {
+    $bg-img: (1: 'bg-battle-1.png',
+        2: 'bg-battle.png',
+        3: 'bg-battle-2.jpg',
+        4: 'bg-battle-4.webp',
+        5:'bg-battle-5.png',
+        6: 'bg-battle-6.png',
+        7: 'bg-battle-7.png');
+    $randomNum: randomNum(7);
+    @return map.get($bg-img, $randomNum);
 }
+
+
+$test: chooseImg();
+$test2: chooseImg();
+$test3: chooseImg();
+@debug $test;
+@debug $test2;
+@debug $test3;
