--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid inside-frame background-battle">
     <mat-grid-list cols="2">
-        <mat-grid-tile *ngIf="pokemonLeft.life > 0" style="display: flex; height: 100%;">
-            <div class="pokemon-left animate__bounceIn" id="pokemonLeft">
+        <mat-grid-tile style="display: flex; height: 100%;">
+            <div *ngIf="pokemonLeft.life > 0"class="pokemon-left animate__bounceIn" id="pokemonLeft">
                 <p class="pokemon-name-left">{{ pokemonLeft.name }}</p>
                 <mat-progress-bar mode="determinate" :value="{{ pokemonLeft.life }}"></mat-progress-bar>
                 <img :src="{{ pokemonLeft.imgBack }}" class="card-img-left" alt="pokemon-left">
             </div>
         </mat-grid-tile>
-        <mat-grid-tile *ngIf="pokemonRight.life > 0" style="height: 100%;">
-            <div class="pokemon-right">
+        <mat-grid-tile style="height: 100%;">
+            <div *ngIf="pokemonRight.life > 0" class="pokemon-right">
                 <div class="d-flex flex-column justify-content-center animate__bounceIn"
                     style="align-items: flex-end; height: 100%;" id="pokemonRight">
                     <p class="pokemon-name-right">{{ pokemonRight.name }}</p>
