credit card scroll fixed

--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid inside-frame" style="overflow: scroll;">
-  <div class="card d-flex flex-column " style="background-color: transparent; border: none;">
+<div class="container-fluid inside-frame" >
+  <div class="card d-flex flex-column">
     <div class="card-body text">
       <h1 class="card-title">Créditos y Licencia</h1>
       <div class="d-flex justify-content-center m-4"><img src="../../../assets/img/licencia.png" /></div>
