--- a/src/_game-battle.scss
+++ b/src/_game-battle.scss
@@ -16,38 +16,68 @@
     flex-direction: column;
     place-content: flex-end;
 }
-
-.pokemon-right {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.pokemon-right{
+	height: 60%;
+	width: 100%;
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	/* justify-content: ; */
+	/* align-items: flex-end; */
+	top: 7vh;
 }
 
 .card-img-left {
-    width: 70% !important;
+    max-width: 150px;
+    // img {
+    //     height: 100px;
+    //     width: 100px;
+    // }
 }
 
 .card-img-right {
-    width: 50% !important;
+    width: 100px;
 }
 
 .mat-button-base {
     margin: 8px 8px 8px 0;
 }
 
-.attack-buttons {
-    display: flex;
-    justify-content: space-evenly;
-    background-color: rgb(255, 255, 255, 0.5);
-    padding: 10px 0px 10px 0px;
-
-    img {
-        width: 25px;
+    .user-actions{
+        // height: 100px;
+        // width: 200px;
+        max-height: 120px;
+        max-width: 220px;
+        background: white;
+        border: 2px solid;
+        border-radius: 5px;
+        display:grid;
+        grid-template-columns: auto;
+        place-items: center;
+        margin-top: 15vh;
+        margin-left: 5%;
+    
+        .attack-buttons {
+            font-size: 90%;
+            width: 100%;
+            height: 50%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            // background-color: rgb(255, 255, 255, 0.5);
+            // padding: 10px 0px 10px 0px;
+            // border: 2px $black;
+            // border-style: none solid;
+            
+            img {
+                width: 20px;
+                height: 20px;
+            }
+        }
     }
-}
+
+
+
 
 .pokemon-name-right {
     text-align: end;
@@ -79,11 +109,26 @@
     .pokemon-left {
         height: 60%;
     }
-
-    .attack-buttons {
-        display: flex;
-        align-self: start;
+    .user-actions{
+        /* position: absolute; */
+        /* top: 10vh; */
+        max-height: 200px;
+        max-width: 300px;
+        /* margin-bottom: 8vh; */
+        margin-top: 10vh;
+        margin-left: 5vw;
+        .attack-buttons{            
+            button, img {
+                transition: all 0.2s ease;
+            }
+        }
+        .attack-buttons:hover{
+            button, img{
+                transform: scale(1.2);
+            }
+        }
     }
+
 
     $img: 'assets/img/#{chooseImg()}';
     .background-battle {
@@ -106,5 +151,11 @@
         right: 1.2%;
         /* left: 0.3%; */
         border-radius: 5px;
+    }
+}
+
+@media (min-width: 1200px){
+    .card-img-right {
+        width: 125px;
     }
 }
