fixed some bugs

--- a/src/app/components/how-to-play/how-to-play.component.html
+++ b/src/app/components/how-to-play/how-to-play.component.html
@@ -77,5 +77,5 @@
       </p>
     </div>
   </div>
-  <img src="../../../assets/img/back.png" (click)="goTo()" style="width: 5vh; margin: 1vh;" />
+  <img src="../../../assets/img/back.png" [routerLink]="['/menu-game',userID]" style="width: 5vh; margin: 1vh;" />
 </div>
