--- a/src/app/components/my-account/my-account.component.html
+++ b/src/app/components/my-account/my-account.component.html
@@ -3,6 +3,9 @@
     <div class="card">
       <div class="card-body">
         <div class="row">
+          <div class="col-12 d-flex justify-content-center">
+            <h2>TRAINER CARD</h2>
+          </div>
           <div class="col-8">
             <div class="d-flex flex-column">
               <div class="d-flex justify-content-between" style="gap: 1vh">
@@ -11,12 +14,12 @@
                   <h6>{{ user.username }}</h6>
                 </span>
               </div>
-              <div class="d-flex justify-content-between">
+              <div class="d-flex justify-content-between" *ngIf="score">
                 <div class="d-flex" style="gap: 1vw">
-                  <img src="../../../assets/img/email.png" style="width: 30px;"/>
+                  <h6>Score</h6>
                 </div>
                 <span>
-                  <h6>{{ user.email }}</h6>
+                  <h6>{{ score }}</h6>
                 </span>
               </div>
               <div class="d-flex justify-content-between" *ngIf="userStat">
@@ -39,8 +42,7 @@
             </div>
           </div>
           <div class="col-4 avatar">
-            <img :src="{{ user.avatar }}" class="card-img-top" alt="Avatar">
-            <p *ngIf="score">Score: {{ score }}</p>
+            <img :src="{{ user.avatar }}" class="avatar-img" alt="Avatar">
           </div>
         </div>
         <div class="row">
