--- a/src/_menu.scss
+++ b/src/_menu.scss
@@ -22,7 +22,7 @@
     button {
         background-color: $dark-garnet;
         color: $white;
-        height: 30px;
+        height: 4vh;
         border-radius: 1vh;
     }
 
@@ -34,7 +34,7 @@
         .mat-card-image {
             width: 100px;
             height: 100px;
-            margin: 30px;
+            margin: 5vh;
         }
     }
 }
@@ -44,7 +44,7 @@
         .menu {
             display: flex;
             flex-direction: column;
-            gap: 5px;
+            gap: 15px;
             align-items: center;
 
             button {
@@ -69,7 +69,7 @@
 
         .img-card{
             .mat-card-image{
-                margin: 0px 0px 30px 0px;
+                margin: 0px 0px 5vh 0px;
             }
         }
     }
