--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid inside-frame">
-    <div class="row">
+    <div class="row" style="height: 100%;">
         <div class="col mx-auto inputs-lg">
             <div class="card">
                 <div class="card-body d-flex flex-column">
