--- a/src/app/components/my-account/my-account.component.scss
+++ b/src/app/components/my-account/my-account.component.scss
@@ -30,6 +30,10 @@
     }
 }
 
+.trainer-card {
+    font-family: 'Pokemon Solid', sans-serif;
+}
+
 @include media-breakpoint-down(lg) {
     button {
         font-size: 10px !important;
