--- a/src/app/components/my-account/my-account.component.html
+++ b/src/app/components/my-account/my-account.component.html
@@ -4,12 +4,12 @@
       <div class="card-body">
         <div class="row">
           <div class="col-12 d-flex justify-content-center">
-            <h2>TRAINER CARD</h2>
+            <h2 class="trainer-card">TRAINER CARD</h2>
           </div>
           <div class="col-8">
             <div class="d-flex flex-column">
               <div class="d-flex justify-content-between" style="gap: 1vh">
-                <h6>USERNAME</h6>
+                <h6>Username:</h6>
                 <span>
                   <h6>{{ user.username }}</h6>
                 </span>
@@ -23,8 +23,8 @@
                 </span>
               </div>
               <div class="d-flex justify-content-between" *ngIf="userStat">
-                <div class="d-flex" style="gap:1vw;"><img src="../../../assets/img/trofeo.png" style="width: 30px;"/>
-                  <h6>VICTORIES</h6>
+                <div class="d-flex" style="gap:1vw;">
+                  <h6>Victories</h6>
                 </div>
                 <span>
                   <h6>{{ userStat.victories }}</h6>
