inputs error fixed

--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -25,7 +25,7 @@
                         <input type="submit" class="btn btn-primary" value="Update profile"/>
                     </div>
                 </form>
-                <input [(ngModel)]="error" class="error-input"/>
+                <input [(ngModel)]="error" class="error-input" readonly disabled="true"/>
             </div>
             </div>
         </div>
