--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
                         </div>
                     </form>
                 </div>
-                <input [(ngModel)]="error" class="error-input"/>
+                <input [(ngModel)]="error" class="error-input" readonly disabled="true"/>
             </div>
         </div>
     </div>
