--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -31,7 +31,7 @@
                             <input type="submit" class="btn btn-primary" value="Sign up" (click)="signUp(signUpForm.value)"/>
                         </div>
                     </form>
-                    <input [(ngModel)]="error" class="error-input"/>
+                    <input [(ngModel)]="error" class="error-input" readonly disabled="true"/>
                 </div>
             </div>
         </div>
