--- a/src/_game-battle.scss
+++ b/src/_game-battle.scss
@@ -113,10 +113,13 @@
         width: 30% !important;
     }
 
+    .card-img-right {
+        max-height: 150px;
+    }
+
     .pokemon-left {
         height: 60%;
         top: 10vh;
-
     }
     .user-actions{
         /* position: absolute; */
@@ -161,6 +164,7 @@
         /* left: 0.3%; */
         border-radius: 5px;
     }
+
 }
 
 @media (min-width: 1200px){
